--- a/app/views/course_templates/index.html.erb
+++ b/app/views/course_templates/index.html.erb
@@ -19,6 +19,7 @@
     </th>
 
     <th>
+      Department
     </th>
   </tr>
 
@@ -32,6 +33,12 @@
       <%= course.title %>
     </td>
 
+    <td>
+      <a href="/departments/<%= course.department_id %>">
+        <%= Department.find(course.department_id).name %>
+      </a>
+    </td>
+    
     <td>
       <a href="/courses/<%= course.id %>">
         Show details
