--- a/app/views/course_templates/show.html.erb
+++ b/app/views/course_templates/show.html.erb
@@ -15,6 +15,20 @@
   <dd>
     <%= @course.title %>
   </dd>
+  <dt>
+    Department
+  </dt>
+  <dd>
+    <a href="/departments/<%= @course.department_id %>">
+      <%= Department.find(@course.department_id).name %>
+    </a>
+  </dd>
+  <dt>
+    Number of Enrolled Students
+  </dt>
+  <dd>
+    <%= Enrollment.where(course_id: @course.id).count %>
+  </dd>
 </dl>
 
 <a href="/delete_course/<%= @course.id %>">
@@ -26,3 +40,40 @@
 <a href="/courses">
   Go back
 </a>
+<div class="card mt-4">
+  <div class="card-header">
+    Roster
+  </div>
+  <ul class="list-group list-group-flush">
+    <% Enrollment.where(course_id: @course.id).each do |enrollment| %>
+      <li class="list-group-item">
+        <a href="/students/<%= enrollment.student_id %>">
+          <%= Student.find(enrollment.student_id).first_name %>
+          <%= Student.find(enrollment.student_id).last_name %>
+        </a>
+      </li>
+    <% end %>
+  </ul>
+  <div class="card-header">
+    Enroll a new student
+  </div>
+    <ul class="list-group">
+      <li class="list-group-item">
+        <form action="/create_enrollment" >
+          <!-- Label and input for title -->
+          <div class="form-group">
+            <label for="title">
+              Student
+            </label>
+        
+            <input type="text" id="title" name="title" class="form-control">
+          </div>
+        
+          
+          <button class="btn btn-block btn-outline-secondary">
+            Create enrollment
+          </button>
+        </form>
+      </li>
+    </ul>
+</div>
