--- a/app/views/course_templates/show.html.erb
+++ b/app/views/course_templates/show.html.erb
@@ -59,15 +59,18 @@
   </div>
     <ul class="list-group">
       <li class="list-group-item">
-        <form action="/create_enrollment" >
+        <form action="/create_enrollment" method="post">
           <!-- Label and input for title -->
           <div class="form-group">
             <label for="title">
               Student
             </label>
         
-            <input type="text" id="title" name="title" class="form-control">
+            <%= select_tag("student_id", options_from_collection_for_select(Student.all, :id, :last_name, @course.try(:student_id)), :class => "form-control") %>
+            or <a href="/students/new">Add a new student</a>
           </div>
+          <!-- Label and input for actor -->
+          <input type="hidden" name="course_id" value="<%= @course.id %>">
         
           
           <button class="btn btn-block btn-outline-secondary">
